<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="16"
    android:background="@drawable/background"
    tools:context=".registration">

    <ImageView
        android:layout_weight="2.5"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/mylogo"
        />
    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/companyname"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Registration Form :"
        android:textColor="#ff22"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/edittextID1"
        android:layout_weight="1.5"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint1"

        />
    <EditText
        android:id="@+id/edittextID2"
        android:layout_weight="1.5"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint5"
        />
    <EditText
        android:id="@+id/edittextID3"
        android:layout_weight="1.5"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint6"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/edittextID4"
        android:layout_weight="1.5"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint7"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/edittextID5"
        android:layout_weight="1.5"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint2"
        />


        <EditText
            android:id="@+id/edittextID6"
            android:layout_weight="1.5"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint3"
            />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        >
        <CheckBox
            android:id="@+id/checkboxID1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamandcondition"
            android:textSize="20sp"
            android:textColor="#00058b"
            android:textStyle="bold"

            />
    </LinearLayout>

    <Button
        android:id="@+id/buttonID1"
        android:onClick="Butoonandcheckbox"
        android:layout_width="150dp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:text="submit"
        android:background="#d24587"
        />

</LinearLayout>