<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    android:weightSum="11"
    tools:context=".AboutMe">

    <ImageView
        android:layout_weight="5"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/mypic" />

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/myname"
        android:textColor="#e2ff3f"
        android:textStyle="bold"
        android:textSize="25sp"
        />
    <LinearLayout
        android:layout_weight="3"
        android:weightSum="7"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">


    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/aboutMe"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#00ff62"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp"
        />
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/programmer"
            android:layout_marginLeft="50dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/developer"
            android:layout_marginLeft="50dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gamer"
            android:layout_marginLeft="50dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gam"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            />
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="3.5"
    >
    <Button
        android:id="@+id/ID1"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="#00b937"
        android:text="@string/details"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        />
    <Button
        android:id="@+id/educationbuttonID"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="#ff1af4"
        android:text="@string/Education"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        />
    <Button
        android:id="@+id/skillbuttonID"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="#fd531b"
        android:text="@string/Skill"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        />
</LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3.5"
        >
        <Button
            android:id="@+id/experiencebuttonID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="#1b1ffd"
            android:text="@string/Experience"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            />
        <Button
            android:id="@+id/contactsbuttonID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="#e7000f"
            android:text="@string/Contacts"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            />

    </LinearLayout>

</LinearLayout>